--- a/dark/index.html
+++ b/dark/index.html
@@ -1019,24 +1019,26 @@
                   </a>
                 </div>
                 <div class="component-wrapper">
-                  <div class="mdc-slider mdc-slider--discrete mdc-slider--display-markers" tabindex="0" role="slider"
-                    aria-valuemin="1" aria-valuemax="10"
-                    aria-label="Select Value">
-                    <div class="mdc-slider__track-container">
-                      <div class="mdc-slider__track"></div>
-                      <div class="mdc-slider__track-marker-container"></div>
-                    </div>
-                    <div class="mdc-slider__thumb-container">
-                      <div class="mdc-slider__pin">
-                        <span class="mdc-slider__pin-value-marker"></span>
+                    <div class="mdc-slider mdc-slider--discrete">
+                        <input class="mdc-slider__input" type="range" min="0" max="100" value="50" name="volume" step="10" aria-label="Discrete slider demo">
+                        <div class="mdc-slider__track">
+                          <div class="mdc-slider__track--inactive"></div>
+                          <div class="mdc-slider__track--active">
+                            <div class="mdc-slider__track--active_fill"></div>
+                          </div>
+                        </div>
+                        <div class="mdc-slider__thumb">
+                          <div class="mdc-slider__value-indicator-container" aria-hidden="true">
+                            <div class="mdc-slider__value-indicator">
+                              <span class="mdc-slider__value-indicator-text">
+                                50
+                              </span>
+                            </div>
+                          </div>
+                          <div class="mdc-slider__thumb-knob"></div>
+                        </div>
                       </div>
-                      <svg class="mdc-slider__thumb" width="21" height="21">
-                        <circle cx="10.5" cy="10.5" r="7.875"></circle>
-                      </svg>
-                      <div class="mdc-slider__focus-ring"></div>
                     </div>
-                  </div>
-                </div>
               </section>
     
               <!-- Snackbar -->
