--- a/dark/index.html
+++ b/dark/index.html
@@ -924,8 +924,14 @@
                     </div>
                     <div class="mdc-card__actions">
                       <div class="mdc-card__action-buttons">
-                        <button class="mdc-button mdc-card__action mdc-card__action--button">Button</button>
-                        <button class="mdc-button mdc-card__action mdc-card__action--button">Button</button>
+                        <button class="mdc-button mdc-card__action mdc-card__action--button">
+                            <span class="mdc-button__ripple"></span>
+                            <span class="mdc-button__label">Button</span>
+                        </button>
+                        <button class="mdc-button mdc-card__action mdc-card__action--button">
+                            <span class="mdc-button__ripple"></span>
+                            <span class="mdc-button__label">Button</span>
+                        </button>
                       </div>
                     </div>
                   </div>
@@ -1093,9 +1099,11 @@
                         </div>
                         <footer class="mdc-dialog__actions">
                           <button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="no">
+                            <span class="mdc-button__ripple"></span>
                             <span class="mdc-button__label">Button</span>
                           </button>
                           <button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="yes">
+                            <span class="mdc-button__ripple"></span>
                             <span class="mdc-button__label">Button</span>
                           </button>
                         </footer>
