cleaned up html

--- a/dark/index.html
+++ b/dark/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="bundle.css">
     </head>
-    <body class="mdc-typography">
+    <body class="mdc-typography dark-theme">
         <aside class="theme-builder-drawer mdc-drawer">
           <div class="mdc-drawer__header">
             <h1 class="theme-builder-title mdc-typography--headline5">
