--- a/dark/index.html
+++ b/dark/index.html
@@ -6,7 +6,7 @@
     <body class="mdc-typography dark-theme">
         <aside class="theme-builder-drawer mdc-drawer">
           <div class="mdc-drawer__header">
-            <h1 class="theme-builder-title mdc-typography--headline5">
+            <!-- <h1 class="theme-builder-title mdc-typography--headline5">
               <svg width="24px" height="24px" viewbox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <defs>
                   <path d="M23.8461538,12 C23.8461538,5.46307692 18.5369231,0.153846154 12,0.153846154 C5.46307692,0.153846154 0.153846154,5.46307692
@@ -37,7 +37,7 @@
                 </g>
               </svg>
               Build a Material Theme
-            </h1>
+            </h1> -->
             <h2 class="theme-name mdc-typography--headline5" placeholder="Theme name..."></h2>
           </div>
           <hr class="mdc-list-divider theme-builder-drawer-divider">
@@ -189,7 +189,7 @@
               <code class="theme-summary-code">$mdc-typography--headline3</code>
               <figure class="theme-summary-typography mdc-typography--headline3">H3</figure>
             </div>
-            <hr class="mdc-list-divider typography-baseline-divider">
+            <!-- <hr class="mdc-list-divider typography-baseline-divider">
             <div class="theme-summary-line theme-summary-line--typography">
               <code class="theme-summary-code">$mdc-typography--headline4</code>
               <figure class="theme-summary-typography mdc-typography--headline4">H4</figure>
@@ -203,7 +203,7 @@
             <div class="theme-summary-line theme-summary-line--typography">
               <code class="theme-summary-code">$mdc-typography--headline6</code>
               <figure class="theme-summary-typography mdc-typography--headline6">H6</figure>
-            </div>
+            </div> -->
             <hr class="mdc-list-divider typography-baseline-divider">
             <div class="theme-summary-line theme-summary-line--typography">
               <code class="theme-summary-code">$mdc-typography--subtitle1</code>
