--- a/dark/index.html
+++ b/dark/index.html
@@ -1153,34 +1153,67 @@
                   </a>
                 </div>
                 <div class="component-wrapper text-field-component-wrapper text-field-component-wrapper-1">
-                  <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-trailing-icon">
-                    <input class="mdc-text-field__input">
-                    <div class="mdc-notched-outline">
-                      <div class="mdc-notched-outline__leading"></div>
-                      <div class="mdc-notched-outline__notch">
-                        <label class="mdc-floating-label">Label</label>
-                      </div>
-                      <div class="mdc-notched-outline__trailing"></div>
-                    </div>
+                  <label class="mdc-text-field mdc-text-field--outlined">
+                    <span class="mdc-notched-outline">
+                      <span class="mdc-notched-outline__leading"></span>
+                      <span class="mdc-notched-outline__notch">
+                        <span class="mdc-floating-label" id="my-label-id">Label</span>
+                      </span>
+                      <span class="mdc-notched-outline__trailing"></span>
+                    </span>
+                    <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id" placeholder="Placeholder Text">
+                  </label>
+                  <div class="mdc-text-field-helper-line">
+                    <div class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent">Assistive text</div>
                   </div>
+                </div>
+                <div class="component-wrapper text-field-component-wrapper text-field-component-wrapper-1">
+                  <label class="mdc-text-field mdc-text-field--outlined mdc-text-field--disabled">
+                    <span class="mdc-notched-outline">
+                      <span class="mdc-notched-outline__leading"></span>
+                      <span class="mdc-notched-outline__notch">
+                        <span class="mdc-floating-label" id="my-label-id">Label</span>
+                      </span>
+                      <span class="mdc-notched-outline__trailing"></span>
+                    </span>
+                    <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id" placeholder="Placeholder Text" disabled>
+                  </label>
                   <div class="mdc-text-field-helper-line">
                     <div class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent">Assistive text</div>
                   </div>
                 </div>
                 <div class="component-wrapper text-field-component-wrapper text-field-component-wrapper-2">
-                    <label class="mdc-text-field mdc-text-field--filled">
-                        <span class="mdc-text-field__ripple"></span>
-                        <span class="mdc-floating-label" id="my-label-id">Label</span>
-                        <input class="mdc-text-field__input" type="text"
-                               aria-labelledby="my-label-id"
-                               aria-controls="my-helper-id"
-                               aria-describedby="my-helper-id">
-                        <span class="mdc-line-ripple"></span>
-                      </label>
+                  <label class="mdc-text-field mdc-text-field--filled">
+                    <span class="mdc-text-field__ripple"></span>
+                    <span class="mdc-floating-label" id="my-label-id">Label</span>
+                    <input class="mdc-text-field__input" type="text"
+                           aria-labelledby="my-label-id"
+                           aria-controls="my-helper-id"
+                           aria-describedby="my-helper-id"
+                           placeholder="Placeholder Text">
+                    <span class="mdc-line-ripple"></span>
+                  </label>
                   <div class="mdc-text-field-helper-line">
-                    <div class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent">Assistive text</div>
+                    <div class="mdc-text-field-helper-text" id="my-helper-id" aria-hidden="true">Helper Text</div>
                   </div>
                 </div>
+                <div class="component-wrapper text-field-component-wrapper text-field-component-wrapper-2">
+                  <label class="mdc-text-field mdc-text-field--filled mdc-text-field--disabled">
+                    <span class="mdc-text-field__ripple"></span>
+                    <span class="mdc-floating-label" id="my-label-id">Label</span>
+                    <input class="mdc-text-field__input" type="text"
+                           aria-labelledby="my-label-id"
+                           aria-controls="my-helper-id"
+                           aria-describedby="my-helper-id"
+                           placeholder="Placeholder Text"
+                           disabled >
+                    <span class="mdc-line-ripple"></span>
+                  </label>
+                  <div class="mdc-text-field-helper-line">
+                    <div class="mdc-text-field-helper-text" id="my-helper-id" aria-hidden="true">Helper Text</div>
+                  </div>
+                </div>
+
               </section>
     
               <!-- Tabs -->
