--- a/dark/index.html
+++ b/dark/index.html
@@ -1231,7 +1231,7 @@
                           <div class="mdc-tab-scroller__scroll-content">
                             <button class="mdc-tab mdc-tab--active" role="tab" aria-selected="true" tabindex="0">
                               <span class="mdc-tab__content">
-                                <span class="mdc-tab__text-label">Button</span>
+                                <span class="mdc-tab__text-label">Tab 1</span>
                               </span>
                               <span class="mdc-tab-indicator mdc-tab-indicator--active">
                                 <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
@@ -1240,7 +1240,7 @@
                             </button>
                             <button class="mdc-tab" role="tab" aria-selected="true" tabindex="0">
                               <span class="mdc-tab__content">
-                                <span class="mdc-tab__text-label">Button</span>
+                                <span class="mdc-tab__text-label">Tab 2</span>
                               </span>
                               <span class="mdc-tab-indicator">
                                 <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
@@ -1249,7 +1249,7 @@
                             </button>
                             <button class="mdc-tab" role="tab" aria-selected="true" tabindex="0">
                                 <span class="mdc-tab__content">
-                                  <span class="mdc-tab__text-label">Button</span>
+                                  <span class="mdc-tab__text-label">Tab 3</span>
                                 </span>
                                 <span class="mdc-tab-indicator">
                                   <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
