--- a/dark/index.html
+++ b/dark/index.html
@@ -698,7 +698,7 @@
                     <div class="mdc-chip">
                       <div class="mdc-chip__checkmark" >
                         <svg class="mdc-chip__checkmark-svg" viewbox="-2 -3 30 30">
-                          <path class="mdc-chip__checkmark-path" fill="none" stroke="black"
+                          <path class="mdc-chip__checkmark-path" fill="none" stroke="var(--primary)"
                                 d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
                         </svg>
                       </div>
@@ -707,7 +707,7 @@
                     <div class="mdc-chip mdc-chip--selected">
                       <div class="mdc-chip__checkmark" >
                         <svg class="mdc-chip__checkmark-svg" viewbox="-2 -3 30 30">
-                          <path class="mdc-chip__checkmark-path" fill="none" stroke="black"
+                          <path class="mdc-chip__checkmark-path" fill="none" stroke="var(--primary)"
                                 d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
                         </svg>
                       </div>
@@ -716,7 +716,7 @@
                     <div class="mdc-chip mdc-chip--selected">
                       <div class="mdc-chip__checkmark" >
                         <svg class="mdc-chip__checkmark-svg" viewbox="-2 -3 30 30">
-                          <path class="mdc-chip__checkmark-path" fill="none" stroke="black"
+                          <path class="mdc-chip__checkmark-path" fill="none" stroke="var(--primary)"
                                 d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
                         </svg>
                       </div>
@@ -1295,12 +1295,25 @@
 
                 <!-- Disabled Slider -->
                 <!-- <div class="component-wrapper">
-                  <div class="mdc-slider mdc-slider--discrete mdc-slider--disabled">
+                  <div class="mdc-slider mdc-slider--discrete mdc-slider--tick-marks mdc-slider--disabled">
                     <input disabled class="mdc-slider__input" type="range" min="0" max="100" value="50" name="volume" step="10" aria-label="Discrete slider with tick marks demo">
                     <div class="mdc-slider__track">
                       <div class="mdc-slider__track--inactive"></div>
                       <div class="mdc-slider__track--active">
                         <div class="mdc-slider__track--active_fill"></div>
+                      </div>
+                      <div class="mdc-slider__tick-marks">
+                        <div class="mdc-slider__tick-mark--active"></div>
+                        <div class="mdc-slider__tick-mark--active"></div>
+                        <div class="mdc-slider__tick-mark--active"></div>
+                        <div class="mdc-slider__tick-mark--active"></div>
+                        <div class="mdc-slider__tick-mark--active"></div>
+                        <div class="mdc-slider__tick-mark--active"></div>
+                        <div class="mdc-slider__tick-mark--inactive"></div>
+                        <div class="mdc-slider__tick-mark--inactive"></div>
+                        <div class="mdc-slider__tick-mark--inactive"></div>
+                        <div class="mdc-slider__tick-mark--inactive"></div>
+                        <div class="mdc-slider__tick-mark--inactive"></div>
                       </div>
                     </div>
                     <div class="mdc-slider__thumb">
@@ -1315,7 +1328,6 @@
                     </div>
                   </div>
                 </div> -->
-
               </section>
     
               <!-- Snackbar -->
