set theme color variables, fixed buttons, checkbox, switch, radio colors

--- a/light/index.html
+++ b/light/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="bundle.css">
     </head>
-    <body class="mdc-typography dark-theme">
+    <body class="mdc-typography light-theme">
         <aside class="theme-builder-drawer mdc-drawer">
           <div class="mdc-drawer__header">
             <!-- <h1 class="theme-builder-title mdc-typography--headline5">
@@ -413,18 +413,22 @@
                     <div class="mdc-menu-surface--anchor">
                       <div class="mdc-menu mdc-menu-surface mdc-menu-surface--open" tabindex="-1">
                         <ul class="mdc-list" role="menu" aria-hidden="true" aria-orientation="vertical">
-                          <li class="mdc-list-item" role="menuitem">
-                            <span class="mdc-list-item__text">Body 2</span>
-                          </li>
-                          <li class="mdc-list-item" role="menuitem">
-                            <span class="mdc-list-item__text">Body 2</span>
-                          </li>
-                          <li class="mdc-list-item" role="menuitem">
-                            <span class="mdc-list-item__text">Body 2</span>
-                          </li>
-                          <li class="mdc-list-item" role="menuitem">
-                            <span class="mdc-list-item__text">Body 2</span>
-                          </li>
+                          <ul class=mdc-menu__selection-group>
+                            <li class="mdc-list-item" role="menuitem">
+                              <span class="mdc-list-item__text">Body 2</span>
+                            </li>
+                            <li class="mdc-list-item" role="menuitem">
+                              <span class="mdc-list-item__text">Body 2</span>
+                            </li>
+                          </ul>
+                          <ul class=mdc-menu__selection-group>
+                            <li class="mdc-list-item" role="menuitem">
+                              <span class="mdc-list-item__text">Body 2</span>
+                            </li>
+                            <li class="mdc-list-item" role="menuitem">
+                              <span class="mdc-list-item__text">Body 2</span>
+                            </li>
+                          </ul>
                         </ul>
                       </div>
                     </div>
