--- a/dark/index.html
+++ b/dark/index.html
@@ -286,7 +286,7 @@
                     <span class="mdc-fab__label">Create a new Theme</span>
             </button> -->
             <div class="column">
-              <!-- Button -->
+              <!-- Enabled Buttons -->
               <section class="component-section">
                 <div class="section-header">
                   <a href="https://material.io/design/components/buttons.html" class="mdc-typography--button" target="_blank">
@@ -299,6 +299,13 @@
                     <span class="mdc-button__ripple"></span>
                     <span class="mdc-button__label">Button</span>
                   </button>
+                  <button class="mdc-button mdc-button--raised">
+                    <span class="mdc-button__ripple"></span>
+                    <i class="material-icons mdc-button__icon" aria-hidden="true"
+                      >bookmark</i
+                    >
+                    <span class="mdc-button__label">Button</span>
+                  </button>
                   <button class="mdc-button">
                     <span class="mdc-button__ripple"></span>
                     <span class="mdc-button__label">Button</span>
@@ -308,7 +315,31 @@
                     <span class="mdc-button__label">Button</span>
                   </button>
                 </div>
+
+                <!-- Disabled Buttons -->
+                <div class="component-wrapper button-component-wrapper">
+                  <button class="mdc-button mdc-button--raised" disabled>
+                    <span class="mdc-button__ripple"></span>
+                    <span class="mdc-button__label">Button</span>
+                  </button>
+                  <button class="mdc-button mdc-button--raised" disabled>
+                    <span class="mdc-button__ripple"></span>
+                    <i class="material-icons mdc-button__icon" aria-hidden="true">
+                      bookmark
+                    </i>
+                    <span class="mdc-button__label">Button</span>
+                  </button>
+                  <button class="mdc-button" disabled>
+                    <span class="mdc-button__ripple"></span>
+                    <span class="mdc-button__label">Button</span>
+                  </button>
+                  <button class="mdc-button mdc-button--outlined" disabled>
+                    <span class="mdc-button__ripple"></span>
+                    <span class="mdc-button__label">Button</span>
+                  </button>
+                </div>
               </section>
+
     
               <!-- Top app bar -->
               <section class="component-section">
@@ -698,7 +729,7 @@
                     <div class="mdc-chip">
                       <div class="mdc-chip__checkmark" >
                         <svg class="mdc-chip__checkmark-svg" viewbox="-2 -3 30 30">
-                          <path class="mdc-chip__checkmark-path" stroke="var(--primary)"
+                          <path class="mdc-chip__checkmark-path" fill="none" stroke="var(--primary)"
                                 d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
                         </svg>
                       </div>
