--- a/dark/index.html
+++ b/dark/index.html
@@ -1184,22 +1184,23 @@
                   </a>
                 </div>
                 <div class="component-wrapper text-field-component-wrapper text-field-component-wrapper-1">
-                  <label class="mdc-text-field mdc-text-field--outlined">
+                  <label class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-trailing-icon">
                     <span class="mdc-notched-outline">
                       <span class="mdc-notched-outline__leading"></span>
                       <span class="mdc-notched-outline__notch">
-                        <span class="mdc-floating-label" id="my-label-id">Label</span>
+                        <span class="mdc-floating-label" id="textfield-outline-1">Label</span>
                       </span>
                       <span class="mdc-notched-outline__trailing"></span>
                     </span>
                     <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id" placeholder="Placeholder Text">
+                    <i class="material-icons mdc-text-field__icon mdc-text-field__icon--trailing" tabindex="0" role="button">event</i>
                   </label>
                   <div class="mdc-text-field-helper-line">
                     <div class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent">Assistive text</div>
                   </div>
                 </div>
                 <div class="component-wrapper text-field-component-wrapper text-field-component-wrapper-1">
-                  <label class="mdc-text-field mdc-text-field--outlined mdc-text-field--disabled">
+                  <label class="mdc-text-field mdc-text-field--outlined mdc-text-field--disabled mdc-text-field--with-trailing-icon">
                     <span class="mdc-notched-outline">
                       <span class="mdc-notched-outline__leading"></span>
                       <span class="mdc-notched-outline__notch">
@@ -1208,13 +1209,14 @@
                       <span class="mdc-notched-outline__trailing"></span>
                     </span>
                     <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id" placeholder="Placeholder Text" disabled>
+                    <i class="material-icons mdc-text-field__icon mdc-text-field__icon--trailing" tabindex="0" role="button">add_circle_outline</i>
                   </label>
                   <div class="mdc-text-field-helper-line">
                     <div class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent">Assistive text</div>
                   </div>
                 </div>
                 <div class="component-wrapper text-field-component-wrapper text-field-component-wrapper-1">
-                  <label class="mdc-text-field mdc-text-field--outlined mdc-text-field--invalid">
+                  <label class="mdc-text-field mdc-text-field--outlined mdc-text-field--invalid mdc-text-field--with-leading-icon">
                     <span class="mdc-notched-outline">
                       <span class="mdc-notched-outline__leading"></span>
                       <span class="mdc-notched-outline__notch">
@@ -1222,6 +1224,7 @@
                       </span>
                       <span class="mdc-notched-outline__trailing"></span>
                     </span>
+                    <i class="material-icons mdc-text-field__icon mdc-text-field__icon--leading" tabindex="0" role="button">bolt</i>
                     <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id" required minlength="8">
                   </label>
                   <div class="mdc-text-field-helper-line">
@@ -1229,9 +1232,10 @@
                   </div>
                 </div>
                 <div class="component-wrapper text-field-component-wrapper text-field-component-wrapper-2">
-                  <label class="mdc-text-field mdc-text-field--filled">
+                  <label class="mdc-text-field mdc-text-field--filled mdc-text-field--with-leading-icon">
                     <span class="mdc-text-field__ripple"></span>
                     <span class="mdc-floating-label" id="my-label-id">Label</span>
+                    <i class="material-icons mdc-text-field__icon mdc-text-field__icon--leading" tabindex="0" role="button">add_circle_outline</i>
                     <input class="mdc-text-field__input" type="text"
                            aria-labelledby="my-label-id"
                            aria-controls="my-helper-id"
@@ -1244,9 +1248,10 @@
                   </div>
                 </div>
                 <div class="component-wrapper text-field-component-wrapper text-field-component-wrapper-2">
-                  <label class="mdc-text-field mdc-text-field--filled mdc-text-field--disabled">
+                  <label class="mdc-text-field mdc-text-field--filled mdc-text-field--disabled mdc-text-field--with-leading-icon">
                     <span class="mdc-text-field__ripple"></span>
                     <span class="mdc-floating-label" id="my-label-id">Disabled</span>
+                    <i class="material-icons mdc-text-field__icon mdc-text-field__icon--leading" tabindex="0" role="button">add_circle_outline</i>
                     <input class="mdc-text-field__input" type="text"
                            aria-labelledby="my-label-id"
                            aria-controls="my-helper-id"
@@ -1260,7 +1265,7 @@
                   </div>
                 </div>
                 <div class="component-wrapper text-field-component-wrapper text-field-component-wrapper-2">
-                  <label class="mdc-text-field mdc-text-field--filled mdc-text-field--invalid">
+                  <label class="mdc-text-field mdc-text-field--filled mdc-text-field--disabled mdc-text-field--with-trailing-icon">
                     <span class="mdc-text-field__ripple"></span>
                     <span class="mdc-floating-label" id="my-label-id">Invalid</span>
                     <input class="mdc-text-field__input" type="text"
@@ -1270,8 +1275,12 @@
                            placeholder="Placeholder Text"
                            required
                            minlength="8">
+                    <i class="material-icons mdc-text-field__icon mdc-text-field__icon--trailing" tabindex="0" role="button">bolt</i>
                     <span class="mdc-line-ripple"></span>
                   </label>
+                  <div class="mdc-text-field-helper-line">
+                    <div class="mdc-text-field-helper-text" id="my-helper-id" aria-hidden="true">Helper Text</div>
+                  </div>
                 </div>
 
 
