fixed invalid filled text field

--- a/dark/index.html
+++ b/dark/index.html
@@ -1964,7 +1964,7 @@
               class="component-wrapper text-field-component-wrapper text-field-component-wrapper-2"
             >
               <label
-                class="mdc-text-field mdc-text-field--filled mdc-text-field--disabled mdc-text-field--with-trailing-icon"
+                class="mdc-text-field mdc-text-field--filled mdc-text-field--invalid mdc-text-field--with-trailing-icon"
               >
                 <span class="mdc-text-field__ripple"></span>
                 <span class="mdc-floating-label" id="my-label-id">Invalid</span>
