--- a/dark/index.html
+++ b/dark/index.html
@@ -2216,16 +2216,14 @@
                     </div>
                     <footer class="mdc-dialog__actions">
                       <button
-                        type="button"
-                        class="mdc-button mdc-dialog__button"
+                        class="mdc-button mdc-button--outlined mdc-dialog__button"
                         data-mdc-dialog-action="no"
                       >
                         <span class="mdc-button__ripple"></span>
                         <span class="mdc-button__label">Button</span>
                       </button>
                       <button
-                        type="button"
-                        class="mdc-button mdc-dialog__button"
+                        class="mdc-button mdc-button--raised mdc-dialog__button"
                         data-mdc-dialog-action="yes"
                       >
                         <span class="mdc-button__ripple"></span>
