styled select menu

--- a/light/index.html
+++ b/light/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="bundle.css" />
   </head>
-  <body class="mdc-typography dark-theme">
+  <body class="mdc-typography light-theme">
     <aside class="theme-builder-drawer mdc-drawer">
       <div class="mdc-drawer__header">
         <!-- <h1 class="theme-builder-title mdc-typography--headline5">
@@ -367,40 +367,6 @@
             >
             <span class="mdc-top-app-bar__title">
               <h1 class="theme-builder-title mdc-typography--headline5">
-                <svg
-                  width="24px"
-                  height="24px"
-                  viewbox="0 0 24 24"
-                  version="1.1"
-                  xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink"
-                >
-                  <g
-                    stroke="none"
-                    stroke-width="1"
-                    fill="none"
-                    fill-rule="evenodd"
-                  >
-                    <g transform="translate(-29.000000, -48.000000)">
-                      <g>
-                        <g transform="translate(0.000000, 44.000000)">
-                          <g transform="translate(29.000000, 0.000000)">
-                            <g transform="translate(0.000000, 4.000000)">
-                              <mask fill="white">
-                                <use xlink:href="#mdc-logo-path"></use>
-                              </mask>
-                              <use
-                                fill="#5F6367"
-                                fill-rule="nonzero"
-                                xlink:href="#mdc-logo-path"
-                              ></use>
-                            </g>
-                          </g>
-                        </g>
-                      </g>
-                    </g>
-                  </g>
-                </svg>
                 Build a Material Theme
               </h1>
             </span>
