light theme review v1 edits, applied to dark theme as needed

--- a/dark/index.html
+++ b/dark/index.html
@@ -1844,7 +1844,7 @@
               </label>
               <div class="mdc-text-field-helper-line">
                 <div
-                  class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent"
+                  class="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg"
                 >
                   <i
                     class="material-icons mdc-text-field__icon"
@@ -1853,7 +1853,7 @@
                   >
                     warning
                   </i>
-                  Assistive text
+                  Error text
                 </div>
               </div>
             </div>
@@ -1950,7 +1950,7 @@
               </label>
               <div class="mdc-text-field-helper-line">
                 <div
-                  class="mdc-text-field-helper-text"
+                  class="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg"
                   id="my-helper-id"
                   aria-hidden="true"
                 >
@@ -1961,12 +1961,12 @@
                   >
                     warning
                   </i>
-                  Helper Text
+                  Error Text
                 </div>
               </div>
             </div>
           </section>
-          
+
           <!-- Tabs -->
           <section class="component-section tabs-section">
             <div class="section-header">
