--- a/light/index.html
+++ b/light/index.html
@@ -1844,7 +1844,7 @@
               </label>
               <div class="mdc-text-field-helper-line">
                 <div
-                  class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent"
+                  class="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg"
                 >
                   <i
                     class="material-icons mdc-text-field__icon"
@@ -1853,7 +1853,7 @@
                   >
                     warning
                   </i>
-                  Assistive text
+                  Error text
                 </div>
               </div>
             </div>
@@ -1864,7 +1864,7 @@
                 class="mdc-text-field mdc-text-field--filled mdc-text-field--with-leading-icon"
               >
                 <span class="mdc-text-field__ripple"></span>
-                <span class="mdc-floating-label" id="my-label-id">Label</span>
+                <span class="mdc-floating-label" id="textfield-1">Label</span>
                 <i
                   class="material-icons mdc-text-field__icon mdc-text-field__icon--leading"
                   tabindex="0"
@@ -1874,7 +1874,7 @@
                 <input
                   class="mdc-text-field__input"
                   type="text"
-                  aria-labelledby="my-label-id"
+                  aria-labelledby="textfield-1"
                   aria-controls="my-helper-id"
                   aria-describedby="my-helper-id"
                   placeholder="Placeholder Text"
@@ -1950,7 +1950,7 @@
               </label>
               <div class="mdc-text-field-helper-line">
                 <div
-                  class="mdc-text-field-helper-text"
+                  class="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg"
                   id="my-helper-id"
                   aria-hidden="true"
                 >
@@ -1961,7 +1961,7 @@
                   >
                     warning
                   </i>
-                  Helper Text
+                  Error Text
                 </div>
               </div>
             </div>
