fixed ripple background color fill on text field

--- a/light/index.html
+++ b/light/index.html
@@ -1778,7 +1778,7 @@
                 <div
                   class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent"
                 >
-                  Assistive text
+                  Persistent Helper Text
                 </div>
               </div>
             </div>
@@ -1815,7 +1815,7 @@
                 <div
                   class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent"
                 >
-                  Assistive text
+                  Persistent Helper Text
                 </div>
               </div>
             </div>
@@ -1853,7 +1853,7 @@
                   >
                     warning
                   </i>
-                  Error text
+                  Error Text
                 </div>
               </div>
             </div>
