--- a/light/index.html
+++ b/light/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="bundle.css" />
+    <link rel="stylesheet" href="lightTheme.css" />
   </head>
   <body class="mdc-typography light-theme">
     <aside class="theme-builder-drawer mdc-drawer">
